--- a/apps/amplifyapp/src/index.html
+++ b/apps/amplifyapp/src/index.html
@@ -10,5 +10,12 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- https://github.com/aws/aws-amplify/issues/678 fix: -->
+    <script>
+      if (global === undefined) {
+        var global = window;
+      }
+    </script>
+    <!-- https://github.com/aws/aws-amplify/issues/678 fix end-->
   </body>
 </html>
